# multiply-game

./: Cargo.toml  index.html
.github/workflows/: static.yml
docs/: index.html  multiply-84f9251294bec53c.js
src/: main.rs
